# telegram-feedback-bot

./: .env.excample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  loader.py  main.py
src/database/: database.py  methods.py  models.py
src/filter/: filter.py
src/handler/: handler_user.py  handler_user_fsm_feedback.py
src/keyboard/: keyboard_handler_user.py
src/lexicon/: lexicon_ru.py
src/state/: state.py
src/utils/: logger.py
