[tool.poetry]
name = "telegram-feedback-bot"
version = "0.1.0"
description = ""
authors = ["Соколов Ярослав <yari.sokolov.2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
